# simple-fat-fs

./: CMakeLists.txt  LICENSE  README.md  constants.h  directory.c  directory.h  fat.c  fat.h  formatter.c  formatter.h  handlers.h  logger.c  logger.h  main.c
handlers/: save_new_file.c
src/: constants.h  data_area.c  data_area.h  directory.c  directory.h  directory_test.c  fat.c  fat.h  fat_test.c  formatter.c  handlers.h  logger.c  logger.h  macros.h  types.h
src/handlers/: new_filename.c  reserve.c  restore.c  restore_file.c  save_file.c  save_new_file.c  store.c  store_reserved.c  utilities.c  utilities.h
